src/test/data/tests/const/valid/const_in_for_init.c
int main(void) {
    for (const int i = 42;;) {
        return i;
    }
}
