src/test/data/tests/const/invalid/assigment.c
int a = 0;
int test_value = a += 1;

int main(void) {
    return test_value;
}
